[bugfix] Fixes visual bug on Firefox and Edge.  - Bugfix in the request for css  - Quick fix for list styles.  WILL NOT WORK FOR LONGER LISTS

--- a/app/stylesheets/lists.scss
+++ b/app/stylesheets/lists.scss
@@ -8,7 +8,7 @@
 
 .list {
   background-color: #71A2FF;
-  min-height: 100%;
+  height: 100%;
   margin: 0 auto 0 auto;
   padding: 0 0 40px 0;
   text-align: center;
