--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -5,9 +5,8 @@ html {
 }
 
 body {
-  background: linear-gradient(#5A90F5, #51A0EE);
+  background: #5A90F5;
   color: #FFF;
-
   padding: 0px;
   margin: 0px;
   cursor: default;
